# bsc

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  data.job  eval.job  experiments  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup  setup.sh  train  train.job
notebooks/: analyse.ipynb  eda.ipynb  evaluate.ipynb  optimise-mobile.ipynb  results.ipynb  train.ipynb
playtorch/mobilenet-v3-small:v0/: mobilenet-v3-small.ptl
playtorch/resnet18:v0/: resnet18.ptl
report/: '  main.tex  references.bib  title.tex
src/: config.py  data.py  defaults.py  eval.py  evaluate.py  infer.py  model.py  modules.py  preprocess.py  profile.py  train.py  transform.py  utils.py
