[tool.poetry]
name = "bsc"
version = "0.1.0"
description = "Experiments for Computer Vision Models for Indoor Localisation"
authors = ["Mika Senghaas <accounts@mikasenghaas.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
torch = "^2.0.0"
torchvision = "^0.15.1"
tqdm = "^4.65.0"
seaborn = "^0.12.2"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
termcolor = "^2.2.0"
wandb = "^0.14.0"
ffmpeg = "^1.4"
opencv-python = "^4.7.0.72"
grad-cam = "^1.4.6"
torcheval = "^0.0.6"
calplot = "^0.1.7.5"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.259"
pre-commit = "^3.2.0"
isort = "^5.12.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
